--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,4 @@
 !query/wikidata/StatusCode/
 *query/wikidata/StatusCode/
 !query/wikidata/StatusCode/20221215101853/
-*query/wikidata/StatusCode/20221215101853/
+*query/wikidata/StatusCode/20221215101853/2018-02-26_2018-03-25_status_500.json
