--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,9 @@
 *input/
 .DS_Store
 *query/
-*query/wikidata/StatusCode/*
-!*query/wikidata/StatusCode/*
 # !query/wikidata/
 # *query/wikidata/
 # !query/wikidata/StatusCode/
 # *query/wikidata/StatusCode/
 # !query/wikidata/StatusCode/20221215101853/
-# *query/wikidata/StatusCode/20221215101853/2018-02-26_2018-03-25_status_500.json
+!*query/wikidata/StatusCode/20221215101853/2018-02-26_2018-03-25_status_500.json
