--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 *output/
 *input/
 .DS_Store
-*query/
+# *query/
+benchmark_query/*
+log_analysis/query/wikidata/*
 # !query/wikidata/
 # *query/wikidata/
 # !query/wikidata/StatusCode/
 # *query/wikidata/StatusCode/
 # !query/wikidata/StatusCode/20221215101853/
-!*query/wikidata/StatusCode/20221215101853/2018-02-26_2018-03-25_status_500.json
+# !*query/wikidata/StatusCode/20221215101853/2018-02-26_2018-03-25_status_500.json
